[package]
name = "bfb"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
ctrlc = "3.4.2"
futures = "0.3.30"
indicatif = "0.17.8"
memmap2 = "0.9.4"
qdrant-client = { git = "https://github.com/qdrant/rust-client.git", branch = "dev" }
rand = "0.8.5"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
uuid = { version = "1.7.0", features = ["serde", "v4"] }

env_logger = "0.11"
indicatif-log-bridge = "0.2"
tracing = { version = "0.1", features = ["log"] }
