[package]
name = "bfb"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = { version = "0.4.38", default-features = false, features = [
    "now",
    "std",
] }
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4.5"
futures = "0.3.31"
indicatif = "0.17.8"
memmap2 = "0.9.5"
qdrant-client = { git = "https://github.com/qdrant/rust-client", branch = "dev" }
rand = "0.8.5"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
env_logger = "0.11.5"
indicatif-log-bridge = "0.2.3"
tracing = { version = "0.1.40", features = ["log"] }
zipf = "7.0.1"
